# skillshare-app

./: .env.example  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  README.zh-TW.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml  update-homebrew.yml
assets/claude-commands/: create-spec.md  implement.md  review-spec.md  spec-status.md
crates/specforge-lib/: Cargo.toml
crates/specforge-lib/src/: lib.rs
crates/specforge-lib/src/models/: ai.rs  ai_assistant.rs  apk.rs  cli_tool.rs  deploy.rs  execution.rs  git.rs  incoming_webhook.rs  ipa.rs  mcp_action.rs  mod.rs  monorepo.rs  project.rs  security.rs  security_insight.rs  snapshot.rs  step_template.rs  toolchain.rs  version.rs  webhook.rs  workflow.rs  worktree.rs  worktree_sessions.rs
crates/specforge-lib/src/repositories/: ai_conversation_repo.rs  ai_repo.rs  deploy_repo.rs  lockfile_validation_repo.rs  mcp_action_repo.rs  mcp_repo.rs  mod.rs  notification_repo.rs  project_repo.rs  security_repo.rs  settings_repo.rs  snapshot_repo.rs  template_repo.rs  workflow_repo.rs
crates/specforge-lib/src/services/: mod.rs
crates/specforge-lib/src/services/mcp_action/: mod.rs  script.rs  webhook.rs  workflow.rs
crates/specforge-lib/src/services/security_guardian/: dependency.rs  insights.rs  mod.rs  patterns.rs
crates/specforge-lib/src/services/snapshot/: capture.rs  diff.rs  mod.rs  replay.rs  search.rs  storage.rs  validation.rs
crates/specforge-lib/src/utils/: database.rs  error.rs  ipa_extractor.rs  migration.rs  mod.rs  path_resolver.rs  plist_parser.rs  schema.rs  shared_store.rs  store.rs
crates/specforge-mcp/: Cargo.toml
docs/: README.md  getting-started.md  security-and-privacy.md  troubleshooting.md
docs/features/: ai-integration.md  git-integration.md  keyboard-shortcuts.md  mcp-server.md  monorepo-support.md  one-click-deploy.md  one-click-scripts.md  project-management.md  security-audit.md  time-machine.md  toolchain-management.md  visual-workflow.md  webhooks.md  worktree-management.md
docs/zh-CN/: README.md  getting-started.md  security-and-privacy.md  troubleshooting.md
docs/zh-CN/features/: ai-integration.md  git-integration.md  keyboard-shortcuts.md  mcp-server.md  monorepo-support.md  one-click-deploy.md  one-click-scripts.md  project-management.md  security-audit.md  time-machine.md  toolchain-management.md  visual-workflow.md  webhooks.md  worktree-management.md
docs/zh-TW/: README.md  getting-started.md  security-and-privacy.md  troubleshooting.md
docs/zh-TW/features/: ai-integration.md  git-integration.md  keyboard-shortcuts.md  mcp-server.md  monorepo-support.md  one-click-deploy.md  one-click-scripts.md  project-management.md  security-audit.md  time-machine.md  toolchain-management.md  visual-workflow.md  webhooks.md  worktree-management.md
scripts/: ensure-mcp-alias.mjs
src/: App.tsx  design.ts  main.tsx
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_assistant.rs  app.rs  cli.rs  deploy.rs  file_watcher.rs  mcp.rs  mod.rs  project.rs  schema_commands.rs  server.rs  snapshot.rs  spec_commands.rs  terminal.rs  workflow_commands.rs
src-tauri/src/commands/script/: mod.rs
src-tauri/src/models/: app_state.rs  incoming_webhook.rs  mcp.rs  mod.rs  schema.rs  spec.rs  workflow_phase.rs
src-tauri/src/repositories/: agent_run_repo.rs  mod.rs  schema_repo.rs  spec_repo.rs  workflow_instance_repo.rs
src-tauri/src/services/: action_runner.rs  agent_dispatcher.rs  audit.rs  autopilot.rs  cli_manager.rs  crypto.rs  file_watcher.rs  gate_evaluator.rs  mod.rs  project_store.rs  schema_service.rs  server_manager.rs  spec_service.rs  template_engine.rs  workflow_engine.rs
src-tauri/src/services/ai_assistant/: interactive.rs  prompt_builder.rs  security.rs  service.rs  session_context.rs  tools.rs
src-tauri/src/utils/: env.rs  mod.rs  paths.rs
src/components/: Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  ConfirmDialog.tsx  CopyButton.test.tsx  CopyButton.tsx  DialogShell.tsx  ErrorBoundary.tsx  FileViewerModal.tsx  FilterTagInput.tsx  HubManagerModal.tsx  IconButton.tsx  Input.tsx  InstallForm.tsx  KeyboardShortcutsModal.tsx  PageHeader.tsx  Pagination.tsx  ScrollToTop.tsx  SegmentedControl.tsx  Select.tsx  ShortcutHUD.tsx  Skeleton.tsx  SkillPickerModal.tsx  Spinner.tsx  SyncPreviewModal.tsx  SyncResultList.tsx  ThemePopover.tsx  Tooltip.tsx
src/components/audit/: AuditAssistantPanel.tsx  AuditOverview.tsx  BlockStamp.tsx  PatternSummary.tsx  RegexTester.tsx  RuleDetailCard.tsx  helpers.ts  index.ts
src/components/config/: ConfigStatusBar.tsx  DiffPreview.tsx  ErrorList.tsx  FieldDocs.tsx
src/components/onboarding/: FirstRunWizard.tsx
src/components/settings/: SettingsPage.tsx
src/components/spec-editor/: NewSpecDialog.tsx  SpecList.tsx
src/components/status-bar/: BackgroundTasksButton.tsx  index.ts
src/components/terminal/: ScriptPtyTerminal.tsx  TerminalTab.tsx
src/components/tour/: TourOverlay.tsx  TourProvider.tsx  TourTooltip.tsx  index.ts  tourSteps.ts
src/components/ui/: KeyboardShortcutsDialog.tsx
src/components/workflow/: WebhookSettingsDialog.tsx  (+3 more)
src/context/: AppContext.tsx  ThemeContext.tsx
src/hooks/: useAuditYamlValidation.ts  useBackgroundTasks.ts  useCursorField.ts  useFocusTrap.ts  useGlobalShortcuts.ts  useLineDiff.ts  usePtySessions.ts  useRegexTester.ts  useSchemas.ts  useSpecs.ts  useSyncMatrix.ts  useYamlValidation.ts
src/lib/: auditFieldDocs.ts  codemirror-theme.ts  fieldDocs.ts  format.ts  paths.ts  queryClient.ts  severity.ts  tauri-api.ts
src/pages/: AuditPage.tsx  AuditRulesPage.tsx  AuditRulesYaml.tsx  BackupPage.tsx  CollectPage.tsx  ConfigPage.tsx  DashboardPage.tsx  DoctorPage.tsx  GitSyncPage.tsx  InstallPage.tsx  LogPage.tsx  SearchPage.tsx  SkillDetailPage.tsx  SkillsPage.tsx  SyncPage.tsx  UpdatePage.tsx
src/types/: index.ts  schema.ts  settings-search.ts  settings.ts  spec.ts
(+39 files in other folders)
