[package]
name = "SpecForge"
version = "0.4.0"
description = "The spec-driven development platform"
authors = ["runkids <https://github.com/runkids/PackageFlow>"]
edition = "2021"
default-run = "SpecForge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Clippy lints configuration
[lints.clippy]
# Deny dangerous patterns
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

# Style warnings
needless_return = "warn"
redundant_closure = "warn"
clone_on_copy = "warn"
manual_map = "warn"

# Allow some patterns that are common in this codebase
too_many_arguments = "allow"
type_complexity = "allow"

[lib]
# Tauri app library - contains commands and Tauri-specific code
name = "specforge_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Shared library (models, repositories, services, utils)
specforge-lib = { path = "../crates/specforge-lib" }

tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "process", "time", "net", "macros", "signal"] }
log = "0.4"
plist = "1"
zip = "2"
glob = "0.3"
whoami = "1"
node-semver = "2"
regex = "1"
dirs = "5"
once_cell = "1"
trash = "5"
shellexpand = "3"
tauri-plugin-pty = "0.1.1"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
url = "2"
tauri-plugin-process = "2"
tauri-plugin-oauth = "2"
urlencoding = "2"
opener = "0.7"
sha1 = "0.10"
notify = "7"
notify-debouncer-mini = "0.5"
dotenvy = "0.15.7"

# Secure token storage
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hostname = "0.4.2"

# AI Integration
async-trait = "0.1"
thiserror = "2.0"
futures = "0.3"
async-stream = "0.3"
reqwest-eventsource = "0.6"

# PTY for AI CLI streaming
portable-pty = "0.8"

# MCP Server
rmcp = { version = "0.8", features = ["server", "macros", "schemars"] }
schemars = "1.0"
fs2 = "0.4"  # File locking for concurrent access

# SQLite Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# Time Machine - Snapshot compression and security analysis
zstd = "0.13"
serde_yaml = "0.9"
strsim = "0.11"
rayon = "1.10"

# Unix-specific: process signal handling for cancellation
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Incoming Webhook Server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Webhook Security
hmac = "0.12"
constant_time_eq = "0.3"
hex = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.23.0"

