[package]
name = "skillshare-app"
version = "0.1.0"
description = "Skillshare App — desktop GUI for Skillshare CLI"
authors = ["runkids"]
edition = "2021"
default-run = "skillshare-app"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[lib]
name = "skillshare_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "image-png", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-pty = "0.1.1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "process", "time", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
log = "0.4"
thiserror = "2.0"
sha2 = "0.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
