[package]
name = "specforge-lib"
version = "0.4.0"
edition = "2021"
description = "SpecForge shared library - models, repositories, services, and utilities"

[lib]
name = "specforge_lib"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
dirs = "5"
once_cell = "1"
regex = "1"
glob = "0.3"
shellexpand = "3"
whoami = "1"
node-semver = "2"
trash = "5"
plist = "1"
zip = "2"
url = "2"
urlencoding = "2"

# Async runtime
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "process", "time", "net", "macros", "signal"] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# SQLite Database
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
reqwest-eventsource = "0.6"

# Error handling
thiserror = "2.0"

# Security
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
hostname = "0.4.2"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Time Machine - Snapshot compression and security analysis
zstd = "0.13"
serde_yaml = "0.9"
strsim = "0.11"
rayon = "1.10"

# MCP types
schemars = "1.0"

# Webhook server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# Unix signal handling
[target.'cfg(unix)'.dependencies]
libc = "0.2"
