[package]
name = "specforge-mcp"
version = "0.4.0"
edition = "2021"
description = "SpecForge MCP Server for AI assistants"

[[bin]]
name = "specforge-mcp"
path = "src/bin/mcp_server.rs"

[dependencies]
# Core library (shared with Tauri app)
specforge-lib = { path = "../specforge-lib" }

# MCP Protocol
rmcp = { version = "0.8", features = ["server", "macros", "schemars"] }
schemars = "1.0"

# Async runtime
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "process", "time", "net", "macros", "signal", "io-std"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
log = "0.4"
dirs = "5"
fs2 = "0.4"
glob = "0.3"
once_cell = "1"
regex = "1"

# Unix signal handling
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
